# qbz

./: .env.example  .gitignore  CHANGELOG-api-keys-refactor.md  CONTRIBUTING.md  DEV_API_KEYS.md  DOWNLOAD_INTEGRATION_PLAN.md  HANDOFF-MERGE.md  HANDOFF_AUDIO.md  MERGE-PREP.md  POST-MERGE-CLEANUP.md  README.md  ROADMAP.md  package-lock.json  package.json  snapcraft.yaml  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: release-aur.yml  release-flatpak.yml  release-linux-aarch64.yml  release-linux.yml
docs/: CASTING_RESEARCH.md
docs/release-1.1.8/: CHANGELOG_FULL.md  CHANGELOG_HIGHLIGHTS.md
flatpak/: com.blitzfc.qbz.metainfo.xml
packaging/appimage/: README.md
packaging/arch/: qbz.desktop
packaging/aur/: PKGBUILD  qbz.desktop
packaging/flatpak/: com.blitzfc.qbz.metainfo.xml  com.blitzfc.qbz.yml  com.blitzkriegfc.qbz.yml
packaging/snap/: snapcraft.yaml
qbz-nix-docs/: OPTIMIZATION_PLAN.md
scripts/: build-and-run.sh  check-no-t-shadow.sh  dev-with-env.sh  monitor-resources.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api_keys.rs  flatpak.rs  lib.rs  logging.rs  main.rs  migration.rs  tray.rs  user_data.rs
src-tauri/src/api/: auth.rs  client.rs  endpoints.rs  error.rs  models.rs
src-tauri/src/api_cache/: mod.rs
src-tauri/src/api_server/: mod.rs
src-tauri/src/artist_blacklist/: mod.rs  models.rs  service.rs
src-tauri/src/artist_vectors/: builder.rs  mod.rs  sparse_vector.rs  store.rs  suggestions.rs
src-tauri/src/audio/: alsa_backend.rs  alsa_direct.rs  backend.rs  diagnostic.rs  mod.rs  pipewire_backend.rs  pulse_backend.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/cast/: chromecast_thread.rs  commands.rs  device.rs  media_server.rs  mod.rs
src-tauri/src/cast/dlna/: commands.rs  device.rs  mod.rs
src-tauri/src/commands/: artist_blacklist.rs  audio_backends.rs  audio_diagnostics.rs  auth.rs  cache.rs  credits.rs  factory_reset.rs  favorites.rs  lastfm.rs  listenbrainz.rs  mod.rs  musicbrainz.rs  musician.rs  notification.rs  playback.rs  playback_context.rs  playlist.rs  playlist_import.rs  playlist_suggestions.rs  queue.rs  radio.rs  remote_metadata.rs  search.rs  share.rs  smart_playlists.rs  user_session.rs  visualizer.rs
src-tauri/src/config/: audio_settings.rs  developer_settings.rs  download_settings.rs  favorites_cache.rs  favorites_preferences.rs  graphics_settings.rs  legal_settings.rs  mod.rs  playback_preferences.rs  remote_control_settings.rs  subscription_state.rs  tray_settings.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/discogs/: mod.rs
src-tauri/src/download_cache/: commands.rs  db.rs  downloader.rs  migration.rs  mod.rs
src-tauri/src/lastfm/: mod.rs
src-tauri/src/listenbrainz/: cache.rs  client.rs  mod.rs  models.rs
src-tauri/src/lyrics/: cache.rs  commands.rs  mod.rs  providers.rs
src-tauri/src/media_controls/: mod.rs
src-tauri/src/musicbrainz/: cache.rs  client.rs  mod.rs  models.rs  smart_playlists.rs
src-tauri/src/offline/: mod.rs
src-tauri/src/offline_cache/: commands.rs  db.rs  downloader.rs  metadata.rs  migration.rs  mod.rs  path_validator.rs
src-tauri/src/playback_context/: mod.rs
src-tauri/src/player/: mod.rs  playback_engine.rs  streaming_source.rs
src-tauri/src/playlist_import/: importer.rs  match_qobuz.rs  mod.rs  models.rs
src-tauri/src/playlist_import/providers/: mod.rs  spotify.rs  tidal.rs
src-tauri/src/plex/: mod.rs
src-tauri/src/queue/: mod.rs
src-tauri/src/radio_engine/: builder.rs  db.rs  engine.rs  mod.rs  tests.rs
src-tauri/src/reco_store/: commands.rs  db.rs  mod.rs
src-tauri/src/session_store/: mod.rs
src-tauri/src/updates/: mod.rs
src-tauri/src/visualizer/: fft_processor.rs  mod.rs  tapped_source.rs
src-tauri/tests/: qobuz_live_smoke.rs
src/lib/adapters/: qobuzAdapters.ts
src/lib/app/: bootstrap.ts
src/lib/components/: AboutModal.svelte  AlbumCard.svelte  AlbumCreditsModal.svelte  AlbumMenu.svelte  AudioOutputBadges.svelte  CastPicker.svelte  DACSetupWizard.svelte  DeviceDropdown.svelte  DownloadButton.svelte  Dropdown.svelte  Modal.svelte  (+52 more)
src/routes/: +layout.svelte  +page.svelte
static/db/: dac_database_seed_500_en.json
(+110 files in other folders)
